--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
 * (The) One True Chain
 
+Repo for me to experiment with Bitcoin and blockchain related concepts.
+
 ** What (barely) works
 
    - [X] Peer discovery
