--- a/README.org
+++ b/README.org
@@ -10,5 +10,8 @@ Repo for me to experiment with Bitcoin and blockchain related concepts.
    - [X] Broadcast
 
 ** What doesn't work
-
+   - [ ] Mining
+   - [ ] Block propagation
+   - [ ] Key management
+   - [ ] TX signing etc.
    - [ ] Everything else
