--- a/README.org
+++ b/README.org
@@ -8,10 +8,10 @@ Repo for me to experiment with Bitcoin and blockchain related concepts.
 
    - [X] Peer discovery
    - [X] Broadcast
-
-** What doesn't work
-   - [ ] Mining
+   - [X] Mining empty blocks
+   - [X] Append-only block store + indices
    - [ ] Block propagation
+   - [ ] Mining
    - [ ] Key management
    - [ ] TX signing etc.
    - [ ] Everything else
