--- a/TODO.org
+++ b/TODO.org
@@ -11,7 +11,8 @@
 * DONE Get rid of ranch as a dep
   CLOSED: [2017-11-28 Tue 15:56]
 * TODO Orphan handler
-* TODO Un-used map in AddrServer
+* DONE Un-used map in AddrServer
+  CLOSED: [2017-11-29 Wed 16:25]
 * TODO Type for block header
 * DONE Update other supervisors w/ shorthand worker/2 and supervisor/2
   CLOSED: [2017-11-29 Wed 16:15]
