Send getblocks on new connection, or when indexing is completed

--- a/README.org
+++ b/README.org
@@ -9,6 +9,7 @@
    - [X] Append-only block store + indices
    - [X] Block propagation/validation
    - [X] UPnP
+   - [X] Difficulty adjustment
    - [ ] "Headers only" sync
    - [ ] Automatic checkpointing/"must be this high" limit
    - [ ] Key management
