--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
 * UFOCoin
 
-** MADE WITH ALIEN TECHNOLOGY. UFOCOIN GOES TO THE MOON!
+MADE WITH ALIEN TECHNOLOGY. UFOCOIN GOES TO THE MOON!
 
 ** What (barely) works
 
